implement mark sharable resource and create linkKey
