# src/main/java/in/guidable/controllers/RoadmapController.java
@@ -4,6 +4,7 @@ import in.guidable.api.RoadmapsApi;
 import in.guidable.model.CreateRoadmapDetail;
 import in.guidable.model.CreateRoadmapResponse;
 import in.guidable.services.RoadmapService;
+import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
@@ -12,14 +13,10 @@ import java.util.ArrayList;
 import java.util.List;
 
 @RestController
+@RequiredArgsConstructor
 public class RoadmapController implements RoadmapsApi {
 
-    private RoadmapService roadmapService;
-    @Autowired
-    public RoadmapController(RoadmapService roadmapService) {
-        this.roadmapService = roadmapService;
-    }
-
+    private final RoadmapService roadmapService;
     @Override
     public ResponseEntity<CreateRoadmapResponse> createRoadmap(CreateRoadmapDetail createRoadmapDetail) {
         return ResponseEntity.ok(roadmapService.createRoadmap(createRoadmapDetail));
@@ -33,5 +30,10 @@ public class RoadmapController implements RoadmapsApi {
     @Override
     public ResponseEntity<CreateRoadmapResponse> getRoadMap(String roadmapId) {
         return ResponseEntity.ok(roadmapService.getRoadMap(roadmapId));
+    }
+
+    @Override
+    public ResponseEntity<CreateRoadmapResponse> createSharableLink(String roadmapId) {
+        return ResponseEntity.ok(roadmapService.createSharableLink(roadmapId));
     }
 }
