# src/main/java/in/guidable/entities/Roadmap.java
@@ -1,17 +1,15 @@
 package in.guidable.entities;
 
-import com.fasterxml.jackson.annotation.JsonIgnore;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
-import lombok.Data;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
-import lombok.Setter;
-import lombok.Value;
 import org.hibernate.annotations.Cascade;
 import org.hibernate.annotations.CascadeType;
 import org.hibernate.annotations.GenericGenerator;
 
+import javax.persistence.Embeddable;
+import javax.persistence.Embedded;
 import javax.persistence.Entity;
 import javax.persistence.GeneratedValue;
 import javax.persistence.Id;
@@ -37,15 +35,11 @@ public class Roadmap implements SharableResource{
     private String parentId;
     private String originalAuthor;
     private String updatedBy;
-    private boolean isSharable;
+    @Embedded
+    private PublicMetadata publicMetadata;
 
     @OneToMany
     @Cascade(CascadeType.ALL)
     @JoinColumn(name = "roadmap_id")
     private List<Checkpoints> checkpoints;
-
-    @Override
-    public boolean getIsSharable() {
-        return isSharable;
-    }
 }
